# globus-transfer

./: .gitignore  .pre-commit-config.yaml  README.md  dr  globus.py  globus_transfer.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
globus/: __init__.py  cli.py  constants.py  endpoints.py  formatting.py  jobs.py  settings.py  uilts.py
