[metadata]
name = globus_transfer
version = 0.1.0
description = A utility for initiating Globus transfers from the command line
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JoshKarpel/globus-transfer
author = Josh Karpel
author_email = josh.karpel@gmail.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages =
    globus
install_requires =
    click>=7.1
    click-didyoumean>=0.0.3
    globus-sdk>=1.9
    htchirp>=2.0
    htcondor>=8.8
    humanize>=2.5.0
    toml>=0.10.1
    importlib-metadata>=1.0;python_version < "3.8"
python_requires = >=3.6
include_package_data = True

[options.entry_points]
console_scripts =
    globus = globus.cli:cli

[bdist_wheel]
universal = 1
